Support more HIR structures; clean up AST classes; simplify SchemaRust